--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     border: 1px solid black;
     display: grid;
     grid-template-rows: repeat(10, 1fr);
-    grid-template-columns: 178px;
+    grid-template-columns: repeat(2, 89px);
     justify-items: center;
     align-items: center;
     padding: 10px;
@@ -44,8 +44,7 @@ body {
 }
 
 .book>.author {
-    grid-row-start: 9;
-    grid-row-end: 11;
+    grid-area: 9 / 1 / 11 / -1;
 }
 
 button.add-book {
@@ -86,9 +85,7 @@ form>.read {
 }
 
 .book>.title {
-    grid-row-start: 3;
-    grid-row-end: 5;
-    grid-column-end: -1;
+    grid-area: 3 / 1 / 5 / -1;
 }
 
 .book>.title,
@@ -109,11 +106,25 @@ form>.read {
     justify-self: start;
     align-self: center;
     background: none;
-    background-image: "img/close-circle.svg";
     background-size: contain;
+    appearance: none;
+    margin: 0;
+    border: none;
+    grid-row-start: 1;
 }
 
 .delete>img {
     width: 20px;
     padding: 0;
+}
+
+.done-reading-symbol {
+    width: 20px;
+    height: 20px;
+    opacity: 1;
+    grid-area: 2 / 1 / 3 / -1;
+}
+
+.done-reading {
+    grid-row-start: 1;
 }
